# rsomics-sc-pca

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: matrix.tsv  scanpy_loadings.tsv  scanpy_scores.tsv  scanpy_variance.tsv  scanpy_variance_nocenter.tsv
